[package]
name = "key-launcher"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A fast, configurable system-wide key launcher written in Rust"
readme = "README.md"
homepage = "https://github.com/codekiu/key-launcher"
repository = "https://github.com/codekiu/key-launcher"
license = "MIT"
keywords = ["hotkeys", "launcher", "keyboard", "shortcuts", "automation"]
categories = ["command-line-utilities", "os"]

[dependencies]
rdev = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
