[package]
name = "key-launcher"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A fast, configurable system-wide key launcher written in Rust"
readme = "README.md"
homepage = "https://github.com/yourusername/key-launcher"
repository = "https://github.com/yourusername/key-launcher"
license = "MIT"
keywords = ["hotkeys", "launcher", "keyboard", "shortcuts", "automation"]
categories = ["command-line-utilities", "os"]

[dependencies]
global-hotkey = "0.5"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
ctrlc = "3.4"
